--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,7 +25,8 @@
 
   {% include language.html %}
   {% include interests.html %}
-
+  {% include skills.html %}
+  
   {% if sidebar.about %}
     {% include about.html %}
   {% endif %}
