--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -55,9 +55,10 @@ p {
         color: #fff;
     }
     .name {
-        font-size: 32px;
-        font-weight: 900;
+        font-size: 24px;
+        font-weight: 500;
         margin-top: 0;
+        background: rgba(0, 0, 0, 0.2);
         margin-bottom: 10px;
     }
     .tagline {
