--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -6,14 +6,15 @@
     body {
        font-size: 12pt;
     }
-
+/*
     img.avatar {
         filter: grayscale(1);
         -webkit-filter: greyscale(1);
     }
+     */
    .main-wrapper .time {
        float: right;
-        color: black !important;
+        //color: black !important;
         -webkit-print-color-adjust: exact; 
    }
     .sidebar-wrapper {
@@ -24,7 +25,7 @@
     }
 
     .remove-container.container-block {
-       display: none;
+      // display: none;
     }
 
     footer {
@@ -32,7 +33,7 @@
     }
 
     .skillset .level-bar-inner {
-       background-color: black !important;
+      // background-color: black !important;
        -webkit-print-color-adjust: exact; 
     }
 
