--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -15,13 +15,14 @@
    .main-wrapper .time {
        float: right;
         //color: black !important;
-        -webkit-print-color-adjust: exact; 
+        //-webkit-print-color-adjust: exact; 
    }
     .sidebar-wrapper {
         position: static;
         float: right;
         width: 40%;
-        -webkit-print-color-adjust: exact; 
+        background: rgba(0, 0, 0, 0.2);
+        //-webkit-print-color-adjust: exact; 
     }
 
     .remove-container.container-block {
@@ -34,7 +35,7 @@
 
     .skillset .level-bar-inner {
       // background-color: black !important;
-       -webkit-print-color-adjust: exact; 
+       //-webkit-print-color-adjust: exact; 
     }
 
 }
