--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -6,27 +6,25 @@
     body {
        font-size: 12pt;
     }
-/*
+
     img.avatar {
         filter: grayscale(1);
         -webkit-filter: greyscale(1);
     }
-     */
    .main-wrapper .time {
        float: right;
-        //color: black !important;
-        //-webkit-print-color-adjust: exact; 
+        color: black !important;
+        -webkit-print-color-adjust: exact; 
    }
     .sidebar-wrapper {
         position: static;
         float: right;
         width: 40%;
-        background: rgba(0, 0, 0, 0.2);
-        //-webkit-print-color-adjust: exact; 
+        -webkit-print-color-adjust: exact; 
     }
 
     .remove-container.container-block {
-      // display: none;
+       display: none;
     }
 
     footer {
@@ -34,8 +32,8 @@
     }
 
     .skillset .level-bar-inner {
-      // background-color: black !important;
-       //-webkit-print-color-adjust: exact; 
+       background-color: black !important;
+       -webkit-print-color-adjust: exact; 
     }
 
 }
