--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -4,9 +4,9 @@
         size: A4;
     }
     body {
-       font-size: 10pt;
+       font-size: 11pt;
     }
-
+/*
     img.avatar {
        display: none; 
        //filter: grayscale(1);
@@ -24,9 +24,9 @@
         -webkit-print-color-adjust: exact; 
     }
 
-   /* .remove-container.container-block {
+    .remove-container.container-block {
        display: none;
-    }*/
+    }
 
     footer {
        display: none;
@@ -36,5 +36,5 @@
        background-color: black !important;
        -webkit-print-color-adjust: exact; 
     }
-
+*/
 }
