--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -11,17 +11,17 @@
        display: none; 
        //filter: grayscale(1);
         //-webkit-filter: greyscale(1);
-    }
+    } */
    .main-wrapper .time {
        float: right;
-        color: black !important;
-        -webkit-print-color-adjust: exact; 
+        //color: black !important;
+        //-webkit-print-color-adjust: exact; 
    }
     .sidebar-wrapper {
         position: static;
         float: right;
         width: 30%;
-        -webkit-print-color-adjust: exact; 
+        //-webkit-print-color-adjust: exact; 
     }
 
     .remove-container.container-block {
@@ -36,5 +36,5 @@
        background-color: black !important;
        -webkit-print-color-adjust: exact; 
     }
-*/
+
 }
